# RhymTools

./: Dockerfile  README.md  app.py  main.py  pyproject.toml
utils/: chord.py  generator.py  harmonizer.py  helper.py  melodizer.py  midi.py  rhyman.py  scales.py
