[tool.poetry]
name = "pyneorhyman"
version = "0.1.0"
description = ""
authors = ["ATIKO777 <neroz7@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.3"
pretty-midi = "^0.2.10"
flask = "^2.3.3"
pydantic = "^2.8.2"
flasgger = "^0.9.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
